clean it up even more. {page-module} is evaluated within the context of the including page, so the intermediate {module-name} variable is not needed

--- a/book/modules/shared/partials/common-nav.adoc
+++ b/book/modules/shared/partials/common-nav.adoc
@@ -1,1 +1,1 @@
-* xref:{module-name}:shared/common-page.adoc[Link to common page]
+* xref:{page-module}:shared/common-page.adoc[Link to common page]
